[package]
name = "png-glitch-cli"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "component:png-glitch-cli"

[package.metadata.component.dependencies]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-component-bindings = "0.6.0"
anyhow = { version = "1.0.79", features = [] }
clap = { version = "4.4.12", features = ["derive"] }
png-glitch = { workspace = true }
