[package]
name = "png-glitch"
version = "0.1.5"
edition = "2021"
authors = ["N.Shimizu <chikoski@gmail.com>"]
description = "A library to glitch PNG images."
license = "MIT"
readme = "README.md"
repository = "https://github.com/chikoski/png-glitch"

[dependencies]
anyhow = "1.0.79"
crc32fast = "1.3.2"
fdeflate = "0.3.4"
thiserror = "1.0.56"