[package]
name = "png-glitch"
version = "0.3.1"
edition = "2021"
authors = ["N.Shimizu <chikoski@gmail.com>"]
description = "A library to glitch PNG images."
license = "MIT"
readme = "README.md"
repository = "https://github.com/chikoski/png-glitch"

[dependencies]
anyhow = "1.0.86"
crc32fast = "1.4.2"
fdeflate = "0.3.4"
thiserror = "2.0.9"
